error handling - get_version() and get_connection_status()
- handle error's during get_version() and get_connection_status()
- fix desktop file cat.

--- a/data/com.github.jkotra.eovpn.desktop
+++ b/data/com.github.jkotra.eovpn.desktop
@@ -6,5 +6,5 @@ Icon=com.github.jkotra.eovpn
 Exec=eovpn %U
 Terminal=false
 Type=Application
-Categories=GNOME;GTK;VPN;
+Categories=Network;X-VPN;
 StartupNotify=false
