--- a/data/meson.build
+++ b/data/meson.build
@@ -11,15 +11,20 @@ install_data(
     install_dir: join_paths(icondir, 'scalable/apps')
 )
 
-
-#install application desktop file
-install_data(
-    project_id + '.desktop',
+i18n.merge_file(
+    input: project_id + '.desktop',
+    output: project_id + '.desktop',
+    po_dir: '../po',
+    type: 'desktop',
+    install: true,
     install_dir: join_paths(datadir, 'applications')
 )
 
-#install metadata
-install_data(
-    project_id + '.metainfo.xml',
-    install_dir: join_paths(prefix, 'share', 'metainfo')
+
+i18n.merge_file(
+    input: project_id + '.metainfo.xml',
+    output: project_id + '.metainfo.xml',
+    po_dir: '../po',
+    install: true,
+    install_dir: join_paths(datadir, 'metainfo')
 )
