support to open ovpn files directly

--- a/data/com.github.jkotra.eovpn.desktop
+++ b/data/com.github.jkotra.eovpn.desktop
@@ -3,7 +3,8 @@ Name=eOVPN
 GenericName=eOVPN
 Comment=OpenVPN Configuration Manager
 Icon=com.github.jkotra.eovpn
-Exec=eovpn %U
+MimeType=application/txt;application/x-openvpn-profile;
+Exec=eovpn -c %f
 Terminal=false
 Type=Application
 Categories=Network;X-VPN;
