UI changes: remember GtkPaned Position
- Remember and restore GtkPaned position (using Gsettings)
- Use Icons instead of text for authentication box in settings window.

--- a/data/meson.build
+++ b/data/meson.build
@@ -28,3 +28,6 @@ i18n.merge_file(
     install: true,
     install_dir: join_paths(datadir, 'metainfo')
 )
+
+settings_schemas = [ project_id + '.gschema.xml' ]
+install_data(settings_schemas, install_dir: schemas_dir)
