--- a/meson.build
+++ b/meson.build
@@ -18,6 +18,7 @@ prefix = get_option('prefix') # should be /usr
 bindir = get_option('bindir') # should be bin
 datadir = get_option('datadir') # should be /usr/share
 pkg_datadir = join_paths(prefix, datadir, meson.project_name())
+schemas_dir = get_option('prefix') / get_option('datadir') / 'glib-2.0' / 'schemas'
 python_dir = python_instllation.get_install_dir()
 
 message(prefix)
