code for nm support and refactor openvpn.py

--- a/meson.build
+++ b/meson.build
@@ -42,6 +42,8 @@ conf.set('PYTHON_DIR', python_dir)
 
 subdir('po')
 subdir('data')
+subproject('networkmanager')
+
 install_subdir(
   'eovpn',
   install_dir: python_dir
