--- a/data/com.github.jkotra.eovpn.desktop
+++ b/data/com.github.jkotra.eovpn.desktop
@@ -3,7 +3,7 @@ Name=eOVPN
 GenericName=eOVPN
 Comment=OpenVPN Configuration Manager
 Icon=com.github.jkotra.eovpn
-MimeType=application/txt;application/x-openvpn-profile;
+MimeType=application/x-openvpn-profile;
 Exec=eovpn -c %f
 Terminal=false
 Type=Application
