--- a/data/com.github.jkotra.eovpn.desktop
+++ b/data/com.github.jkotra.eovpn.desktop
@@ -4,7 +4,7 @@ GenericName=eOVPN
 Comment=OpenVPN Configuration Manager
 Icon=com.github.jkotra.eovpn
 MimeType=application/x-openvpn-profile;
-Exec=eovpn -c %f
+Exec=eovpn %f
 Terminal=false
 Type=Application
 Categories=Network;X-VPN;
