Port to cffi: NetworkManager (WIP)
this commit holds the preliminary changes required to port from ctypes
to cffi for NetworkManager back end.

Along with this, some other changes were:
- change folder structure for backends.
- openvpn3 no more default in meson.
- restart of application is no more require when backend is changed.

--- a/subprojects/networkmanager/meson.build
+++ b/subprojects/networkmanager/meson.build
@@ -8,14 +8,27 @@ deps = [
 ]
 
 python = import('python')
-python_instllation = python.find_installation()
-python_dir = python_instllation.get_install_dir()
-lib_install_dir = python_dir / main_project / 'networkmanager_backend'
+python_exe = python.find_installation()
+python_dir = python_exe.get_install_dir()
+lib_install_dir = python_dir / main_project / 'backend' / 'networkmanager'
 message(lib_install_dir)
 
 libeovpn_nm = shared_library('eovpn_nm',
-  'eovpn_nm.c',
-  dependencies: deps,
-  install : true,
-  install_dir: lib_install_dir
+    'eovpn_nm.c',
+    dependencies: deps,
+    install : true,
+    install_dir: lib_install_dir
+)
+
+
+ffi = custom_target(
+    input: libeovpn_nm,
+    output: '_libeovpn_nm.so',
+    command: [python_exe, meson.source_root() / 'cffi_compile.py' ,
+    '--library', libeovpn_nm,
+    '--header', meson.current_source_dir() / 'eovpn_nm.h',
+    ],
+    install : true, 
+    depends: libeovpn_nm,
+    install_dir : lib_install_dir
 )
