--- a/subprojects/openvpn3/meson.build
+++ b/subprojects/openvpn3/meson.build
@@ -11,15 +11,27 @@ deps = [
 python = import('python')
 python_instllation = python.find_installation()
 python_dir = python_instllation.get_install_dir()
-lib_install_dir = python_dir / main_project / 'openvpn3_backend'
+lib_install_dir = python_dir / main_project / 'backend' / 'openvpn3'
 message(lib_install_dir)
 
 python_exe = find_program('python3', 'python')
 r = run_command(python_exe, 'extract_enums.py', check: true)
 
-libeovpn_nm = shared_library('openvpn3',
+libopenvpn3 = shared_library('openvpn3',
   'openvpn3.c',
   dependencies: deps,
   install : true,
   install_dir: lib_install_dir
+)
+
+ffi = custom_target(
+    input: libopenvpn3,
+    output: '_libopenvpn3.so',
+    command: [python_exe, meson.source_root() / 'cffi_compile.py' ,
+    '--library', libopenvpn3,
+    '--header', meson.current_source_dir() / 'openvpn3.h',
+    ],
+    install : true, 
+    depends: libopenvpn3,
+    install_dir : lib_install_dir
 )
