--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "[c]": {
     "editor.defaultFormatter": "xaver.clang-format",
     "editor.formatOnSave": true
-    }
+    },
+    "mesonbuild.configureOnOpen": false
 }
