feat: OTP Window - openvpn3
- improve dbus logic.
- improve connection manager class.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     "configurations": [
         {
             "name": "eOVPN",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "program": "${cwd}/run_program_debug.py",
 
